Revert to separate Protobuf.cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,7 @@ include(deps/Snappy)
 include(deps/Rocksdb)
 include(deps/Nudb)
 include(deps/date)
-#include(deps/Protobuf)
+include(deps/Protobuf)
 include(deps/gRPC)
 
 ###
