--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -69,8 +69,10 @@ jobs:
         with:
             path: ${{ steps.conan-cache.outputs.dir }}
             key: ${{ hashFiles('~/.conan/profiles/default', 'conanfile.py', 'external/rocksdb/*', '.github/workflows/windows.yml') }}
-      - name: export Snappy
-        run: conan export external/snappy snappy/1.1.9@
+      - name: export custom recipes
+        run: |
+          conan export external/snappy snappy/1.1.9@
+          conan export external/soci soci/4.0.3@
       - name: install dependencies
         run: |
           mkdir $env:build_dir
